--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
         <ul class="blue">
             <li><a href="{{site.baseurl}}/" title="home" class="{% if page.url == '/' %}current{% endif %}" ><span>Home</span></a></li>
-            <li><a href="{{site.baseurl}}/configure" title="configure" class="{% if page.url == '/configure' %}current{% endif %}" ><span>Configure</span></a></li>
+            <li><a href="{{site.baseurl}}/configure" title="configure" class="{% if page.url == '/configure.html' %}current{% endif %}" ><span>Configure</span></a></li>
             <li><a href="{{site.baseurl}}/blog" title="blog" class="{% if page.url contains 'blog' or page.layout == 'blog-article' %}current{% endif %}" ><span>Blog</span></a></li>
             <!--
             <li><a href="{{site.baseurl}}/contact" title="contact" class="{% if page.url == '/contact' %}current{% endif %}" ><span>Contact</span></a></li>
