--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -1,3 +1,4 @@
+/* Nav */
 .current {
   background-color: #000531;
   color: #fff;
@@ -18,6 +19,7 @@
   font-size: 1.25em;
 }
 
+/* Header */
 #header {
   width: 700px;
   margin: 0 auto;
@@ -128,4 +130,5 @@
 #second-header ul.blue li a.current span, ul.blue li a:hover span {
   background: url("../images/blue.png") no-repeat top left;
 }
+
 
